--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
-    "next": "^15.2.3",
+    "next": "15.3.0-canary.14",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
